FAIRSPC-82: cleaned up warnings